will be making upgrades to flex-grid.css for star-wars theme will check in to flexbox later.

--- a/css/flex-grid.css
+++ b/css/flex-grid.css
@@ -1,17 +1,22 @@
 /** flex-grid.css
    author: Michael Williams
    Date: 10/27/2016
-   updated: 10/29/2016
-   version: 0.5
+   updated: 10/30/2016
+   version: 0.6
 ***/
 /*-----------------------------------------
 use case .col should equal 12 if not items will wrap inside .row
 --------------------------------------------*/
+/** upgraded for star-wars design **/
 html {
   box-sizing: border-box;
 }
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+.container {
+  width: 100%;
 }
 
 .row {
