kept header p, add .cards same as header p for future style

--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,14 @@ h1 {
 header p {
   margin-top: -0.75em;
 }
-
 /**************************
 helpers
 ***************************/
-
+.cards {
+  margin-top: -0.75em;
+}
 .txt {
-  
+
 }
 
 /*************************
