mod .cards to card will refactor to design card layout as conatiner for specs laid out coming up

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ header p {
 /**************************
 helpers
 ***************************/
-.cards {
+.card {
   margin-top: -0.75em;
 }
 .txt {
