--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,17 @@ h1 {
 header p {
   margin-top: -0.75em;
 }
+main {
+  margin-top: 3em;
+}
+/*************************
+END GENERAL
+*************************/
 /**************************
 helpers
 ***************************/
 .card {
-  margin-top: -0.75em;
+
 }
 .txt {
 
