main needs a margin-top of 7.5em to be below the top nav, article width of 20em which equals => 320px for the cards going to refactor in the margin space next.img hass min width 20em, max with 6.25% as of now

--- a/css/main.css
+++ b/css/main.css
@@ -15,16 +15,21 @@ p {
 }
 
 main {
-  margin-top: 2em;
+  margin-top: 7.5em;
+}
+article {
+  width: 20em;
 }
 img {
-  width: 100%;
+  min-width: 20em;
+  max-width: 6.25%;
 }
 /**************************
 helpers
 ***************************/
 .card {
-
+  /*width: ;*/
+  border: 1px solid lightgrey;
 }
 .txt {
   text-align: left;
