--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 header {
   background-color: #F0BD35;
   position:fixed;
+  padding-left: 2.0833333333333332%;
   top: 0;
   width: 100%;
+
 }
 h1 {
   margin-bottom: 0;
@@ -13,13 +15,16 @@ h1 {
 p {
   margin-top: .25em;
 }
-
 main {
   margin-top: 7.5em;
+}
+section::after {
+  margin-right: 2.0833333333333332%;
 }
 article {
   width: 20em;
 }
+
 img {
   min-width: 20em;
   max-width: 6.25%;
