--- a/css/flex-grid.css
+++ b/css/flex-grid.css
@@ -30,6 +30,9 @@ html {
   display: flex;
   flex-direction: column;
 }
+.grid {
+
+}
 
 .row {
   display: flex;
@@ -45,31 +48,13 @@ html {
   /*flex-basis: 95.8333333333333336%;*/
 }
 
+.set {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 
-
-@media (min-width: 40em) {/* 640px*/
-  .row {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .col-3, .col-4, .col-6, .col-12 {
-    margin-left: 1.04166666%;
-    margin-right: 1.04166666%;
-  }
-
-  .col-3 {
-    flex-basis: 22.91666668%;
-  }
-
-  .col-4 {
-    flex-basis: 31.24666668%;
-  }
-
-  .col-6 {
-    flex-basis: 47.91666668%;
-  }
-
-  .col-12 {
-    flex-basis: 97.91666668%;
-  }
-}/**  end only media-query 40em **/
+}
+.card {
+  margin-left: 2.0833333333333332%;
+  margin-right: 2.0833333333333332%;
+}
