add a margin-bottom to cards so they do not touch

--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,9 @@ main {
 article {
   width: 20em;
 }
-section {
+/*section {
   display: inline-flex;
-}
+}*/
 
 img {
   min-width: 6.25%;
@@ -35,4 +35,5 @@ helpers
 .card {
   /*width: ;*/
   border: 1px solid lightgrey;
+  margin-bottom: 2em;
 }
