--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 header {
   background-color: #F0BD35;
-  position:fixed;
+  position:absolute;
   padding-left: 2.0833333333333332%;
   top: 0;
   width: 100%;
@@ -11,6 +11,7 @@ h1 {
   font-size: 1.75em;
   font-weight: 700;
 
+
 }
 p {
   margin-top: .25em;
@@ -18,13 +19,15 @@ p {
 main {
   margin-top: 7.5em;
 }
-article {
-  width: 20em;
-}
 /*section {
   display: inline-flex;
 }*/
-
+h2 {
+  margin-left: 0.5em;
+}
+h2 + p {
+  margin-left: 0.8em;
+}
 img {
   min-width: 6.25%;
   max-width: 100%;
