--- a/css/flex-grid.css
+++ b/css/flex-grid.css
@@ -25,6 +25,14 @@ html {
 *::before, *::after {
   box-sizing: inherit;
 }
+.flex {
+  display: flex;
+  justify-content: space-around;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+}
 .set {
   display: flex;
   justify-content: center;
@@ -33,9 +41,12 @@ html {
   flex-wrap: wrap;
 }
 .card {
-  /*margin-left: 2.0833333333333332%;
-  margin-right: 2.0833333333333332%;*/
+  margin-left: 2.0833333333333332%;
+  margin-right: 2.0833333333333332%;
   width: 16em;
 
 
+}
+.push {
+  display: inline-flex;
 }
