--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 header {
   background-color: #F0BD35;
   position:absolute;
-  padding-left: 2.0833333333333332%;
+  /*padding-left: 2.0833333333333332%;*/
   top: 0;
   width: 100%;
 
@@ -10,8 +10,6 @@ h1 {
   margin-bottom: 0;
   font-size: 1.75em;
   font-weight: 700;
-
-
 }
 p {
   margin-top: .25em;
